--- a/article-01.tex
+++ b/article-01.tex
@@ -1,6 +1,8 @@
-\chapter{Example article}
+\elrarticle{Example article: A leadership topic that we have written about}%
+  {Subtitle of the article which may be fairly long and span two lines}%
+  {J. Smith, J. Doe, I.D. Kay}
 
 \input{lipsum-1000}
 \input{lipsum-1000}
 \input{lipsum-1000}
-
+\elrend
