--- a/example.tex
+++ b/example.tex
@@ -1,14 +1,16 @@
-\input{elr}
+\documentclass{elr}
 
-\title{Engineering Leadership Review}
-\author{}
+\elrtitle{Engineering Leadership Review}{volume 1, number 1}
 
 \begin{document}
 \maketitle
 \tableofcontents
 
-\input{article-01}
-\input{article-02}
-\input{article-03}
+\include{article-01}
+%\include{elr-10300}
+\include{article-02}
+%\input{elr-10300}
+%\input{article-03}
+\input{authorguide}
 
 \end{document}
