--- a/elr.cls
+++ b/elr.cls
@@ -16,8 +16,14 @@
 % calc
 \RequirePackage{calc}
 %
-%
+% charter: fonts.
+\RequirePackage[T1]{fontenc}
 \RequirePackage{charter}
+\RequirePackage{lmodern}
+\renewcommand{\rmdefault}{bch}
+\renewcommand{\sfdefault}{lmss}
+% not sure why this is necessary...
+\renewcommand{\bfdefault}{bx}
 %
 % hyperref:
 \RequirePackage[%
@@ -35,17 +41,19 @@
   includefoot,%
   headsep=0mm,
 % a5 format
-  a5paper,
-  margin=15mm,%
-  bindingoffset=5mm,%
+%  a5paper,
+%  margin=15mm,%
+%  bindingoffset=5mm,%
 %% lulu.com pocketbook format
 %  paperwidth=4.25in,%
 %  paperheight=6.87in,%
 %  margin=0.5in,%
 %  bottom=0.75in,%
 %% half-letter format
-%  paperwidth=5.5in,%
-%  paperheight=8.5in,%
+  paperwidth=5.5in,%
+  paperheight=8.5in,%
+  margin=15mm,%
+  bindingoffset=7mm,%
   ]{geometry}
 %
 % fancyhdr: page marks
@@ -61,14 +69,23 @@
 % titlesec: section titles.
 % can't use the 'pagestyles' class option, or else 
 \RequirePackage{titlesec}
-  \titleformat{\chapter}[display]{}{}{0pt}{\bfseries\Large}
-  \titlespacing*{\chapter}{0pt}{10mm}{0pt}[20mm]
+  \setcounter{secnumdepth}{-1}
+  \titleformat{\chapter}[display]{}{}{0pt}{\sffamily\fontseries{sbc}\selectfont\huge}
+  \titlespacing*{\chapter}{0pt}{20mm}{0pt}[10mm]
   % default definition with Large -> large, 2.3ex -> 1.3ex
 %  \titleformat{\section}{\normalfont\large\bfseries}{\thesection}{1em}{}
   \titlespacing{\section}{0pt}{3.5ex plus 1ex minus .2ex}{1.3ex plus .2ex}
   % default definition with large -> normalsize, without \bfseries
 %  \titleformat{\subsection}{\normalfont\fontsize{10pt}{11pt}\selectfont\itshape}{\thesubsection}{1em}{}
   \titleformat{\subsection}{\normalfont\large\itshape}{\thesubsection}{1em}{}
+\RequirePackage{titletoc}
+  \titlecontents{chapter}
+              [0pt]
+              {\addvspace{1.5pc}}
+              {}
+              {\hspace*{-2pc}\makebox[2pc][c]{\bfseries\thecontentspage} \bfseries}
+              {\hspace*{-2pc}}
+              [\addvspace{.5pc}]
 %
 % chapterbib
 \RequirePackage[sectionbib]{chapterbib}
@@ -95,12 +112,15 @@
 %% Custom commands
 \newcommand{\elrarticle}[3]{
   \chapter{#1}
-  \parbox[l]{\textwidth-20mm}{\itshape \large #2}
+  \addtocontents{toc}{\protect\parbox{0.8\textwidth}{\small Here is a one-sentence summary. Maybe I will add another sentence. Maybe I will add a third sentence.}}
+  \hspace{5mm}\parbox[l]{\textwidth-20mm}{\itshape \large #2}
   \vskip 10 mm
   \begin{flushleft}
   \bfseries \scshape #3
   \end{flushleft}
   \vskip 10 mm
+  \fancyhead[CE]{\hcrulefill\small\itshape #1\hcrulefill}
+  \fancyhead[CO]{\hcrulefill\small\itshape #3\hcrulefill}
 }
 %
 \newcommand{\elrbib}[1]{
@@ -114,12 +134,19 @@
 %
 \newcommand{\elrtitle}[2]{
   \title{#1}\author{}
-  \fancyfoot[LE]{\oldstylenums{\bfseries \thepage} \qquad \textsc{#1}}
-  \fancyfoot[RO]{\textsc{#2} \qquad \oldstylenums{\bfseries \thepage}}
+  \fancyfoot[LE,RO]{\bfseries \thepage}
+  \fancyfoot[RE]{\small \textsc{#2}}
+  \fancyfoot[LO]{\small \textsc{#1}}
   \fancypagestyle{plain}{
-    \fancyfoot[LE]{\oldstylenums{\bfseries \thepage} \qquad \textsc{#1}}
-    \fancyfoot[RO]{\textsc{#2} \qquad \oldstylenums{\bfseries \thepage}}
+    \fancyfoot{}
+    \fancyhead{}
+    \fancyfoot[C]{\bfseries \thepage}
   }
+}
+%
+% from http://www.tug.org/pipermail/texhax/2004-August/002644.html
+\newcommand*\hcrulefill{%
+  \leavevmode\leaders\hrule depth-2pt height 2.4pt\hfill\kern0pt
 }
 %
 \endinput
