--- a/example.tex
+++ b/example.tex
@@ -1,6 +1,6 @@
 \documentclass{elr}
 
-\elrtitle{Engineering Leadership Review}{volume 1, number 1}
+\elrtitle{Engineering Leadership Review}{April 2010}
 
 \begin{document}
 \maketitle
