--- a/authorguide.tex
+++ b/authorguide.tex
@@ -1,9 +1,9 @@
 \chapter*{Write for ELR!}
 
-\section{Topics}
+\paragraph{Topics}
 If unsure, contact \emph{elr@lot.utoronto.ca}.
 
-\section*{Audience}
+\paragraph{Audience}
 Refer to the \emph{Author-Audience Matrix}.
 Identify which row (or rows, for mixed groups of co-authors) you inhabit, and then make a choice of which audience your article will address.
 We encourage you to share lessons and insights which are broadly reusable (i.e. cover two or more points), but it is critical that \emph{ELR} editors are able to discern your choice.
@@ -38,18 +38,18 @@ Either note your audience choice when submitting, or make some explicit referenc
 \caption{Author-Audience Matrix. \textbf{(1)} includes student coursework, \textbf{(2)} includes most technical journals, and \textbf{(3)} could be engineering consultants reporting to a client firm.}
 \end{figure}
 
-\section{Format, length \& language}
+\paragraph{Format, length \& language}
 Choose a target length in increments of 500 words.
 1000 words is a rough (but not absolute) minimum.
 \emph{ELR} prefers long-format writing; give your whole thoughts, not just sketches of them.
 
-\emph{ELR} accepts submissions in Canadian English.
+\emph{ELR} accepts submissions in Canadian English and French.
 
-\section{Reviews \& revisions}
+\paragraph{Reviews \& revisions}
 Articles are subject to double-blind reviews; the author(s) are anonymous to the reviewers and vice versa.
 Where possible the reviewers will be from the audience chosen by the author(s).
 Reviewers have the option to recommend an article be resubmitted for review, in which case a second review is undertaken after revisions have taken place.
 Otherwise an \emph{ELR} Section Editor will coordinate revisions with author(s) and recommend acceptance to the Editorial Board once (s)he judges the reviewer's concerns are satisfied.
 
-\section{Technical}
+\paragraph{Technical}
 
