--- a/authorguide.tex
+++ b/authorguide.tex
@@ -1,12 +1,9 @@
 \chapter*{Instructions to Authors}
 \label{authorguide}
 
-\paragraph{Audience}
+\subsection{Audience}
 Refer to the \emph{Author-Audience Matrix}.
-Identify which row (or rows, for mixed groups of co-authors) you inhabit, and then make a choice of which audience your article will address.
-We encourage you to share lessons and insights which are broadly reusable (i.e. cover two or more points), but it is critical that \emph{ELR} editors are able to discern your choice.
-Either note your audience choice when submitting, or make some explicit reference to it in your text.
-\begin{figure}
+\begin{figure}[h]
 \centering
 \begin{tikzpicture}[pubaxis/.style={font=\bfseries\scshape}]
   \draw[draw=gray!30,ultra thick,step=6mm] (0,0) grid (24mm,24mm);
@@ -56,21 +53,54 @@ Either note your audience choice when submitting, or make some explicit referenc
     }
   }
 \end{tikzpicture}
-\caption{Author-Audience Matrix. \textbf{(1)} includes student coursework, \textbf{(2)} includes most technical journals, and \textbf{(3)} could be engineering consultants reporting to a client firm.}
+\caption{\textsc{Author-Audience Matrix.} (1) includes student coursework, (2) includes most technical journals, and (3) could be engineering consultants reporting to a client firm.}
 \end{figure}
+Identify which row (or rows, for mixed groups of co-authors) you inhabit, and then make a choice of which audience your article will address.
+We encourage you to share lessons and insights which are broadly reusable (i.e. cover two or more points), but it is critical that \emph{ELR} editors are able to discern your choice.
+Either note your audience choice when submitting, or make some explicit reference to it in your text.
 
-\paragraph{Format, length \& language}
+\subsection{Format, length \& language}
 Choose a target length in increments of 500 words.
-1000 words is a rough (but not absolute) minimum.
+One thousand words is a rough (but not absolute) minimum.
 \emph{ELR} prefers long-format writing; give your whole thoughts, not just sketches of them.
 
 \emph{ELR} accepts submissions in Canadian English and French.
 
-\paragraph{Reviews \& revisions}
+\subsection{Reviews \& revisions}
 Articles are subject to double-blind reviews; the author(s) are anonymous to the reviewers and vice versa.
 Where possible the reviewers will be from the audience chosen by the author(s).
+
 Reviewers have the option to recommend an article be resubmitted for review, in which case a second review is undertaken after revisions have taken place.
-Otherwise an \emph{ELR} Section Editor will coordinate revisions with author(s) and recommend acceptance to the Editorial Board once (s)he judges the reviewer's concerns are satisfied.
+Otherwise an \emph{ELR} Section Editor will coordinate revisions with author(s) and recommend acceptance to the Editorial Board once (s)he judges the reviewers' concerns are satisfied.
 
-\paragraph{Technical}
+The Editorial Board may reject any article, postpone it for publication in a later issue, or request a resubmission, on the basis of reviews or any other cause.
 
+\subsection{License \& republication}
+\emph{ELR} prefers submissions which have not been published in the same form elsewhere.
+However, the compilation or abridgement of existing works, where such compilation or abridgement makes the resulting text valuable to the readership of \emph{ELR}, is acceptable.
+
+\emph{ELR} does \emph{not} ask or require that authors cede ownership or copyright of their work.
+However, in the interest of preventing barriers to accessing the much-needed discussion on engineering leadership, \emph{ELR} requires authors to license their work under one of the Creative Commons licenses, all of which preserve the core right of readers to redistribute the work for non-commercial purposes without modification.
+
+We suggest the most liberal (`Attribution') license, but authors may select another license at their discretion. Authors can learn more about the Creative Commons licenses at \url{http://creativecommons.org/choose/?jurisdiction=ca}
+
+\subsection{Graphics}
+Black-and-white and greyscale graphics are welcome accompaniment to articles, especially where they clearly illustrate the frameworks and conceptual relationships discussed therein.
+The \emph{ELR} layout and graphic design staff can assist authors in converting sketches and colour graphics into suitable formats and resolutions for printing.
+
+\subsection{Technical}
+\emph{ELR} is published in \LaTeX; accordingly, submissions in \LaTeX~ format are preferred where possible.
+However, \emph{ELR} can review and copyedit articles in most common document formats, including:
+\begin{itemize}
+  \item Open Document Format (ODF)
+  \item Rich Text Format (RTF)
+  \item Plain text, and
+  \item Microsoft Word format.
+\end{itemize}
+The outcome of editorial decisions is not affected by the format of a submission.
+
+Complete bibliographic information should accompany each article.
+If possible, such information should be in BibTeX format.
+Otherwise, authors should not exert themselves to follow any particular bibliographic format, but simply ensure the connection of particular citations to the cited items are clear.
+
+All open and many common proprietary graphics formats are accepted.
